--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-# CIS5755
+<p># CIS5755
 CIS5755
 #1. Group information
     #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu
@@ -31,3 +31,4 @@ CIS5755
 		git push
 		Entered the GITHIB username and Access token
 	Modified files are pushed to Github and In the Github, latest changes are reflected.
+</p>
