--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ CIS5755
     
 
 #4. Project Introduction
-    Host a Static website in GITHUB using Flask
+    Host a Static website in GITHUB using Flask.
 
 #5. Major steps
 	Signup to a GITHUB account and created a Repository with name 'CIS5755'
