--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p># CIS5755
-CIS5755
+CIS5755 Software Engineering
 #1. Group information
     #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu
     #Group Member 2 - Rajasekhar Y
