--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
-<p># CIS5755
-CIS5755 Software Engineering
-#1. Group information
-    #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu
-    #Group Member 2 - Rajasekhar Y
+<html>
+	<body>
+		<div>
+			<p># CIS5755
+			CIS5755 Software Engineering
+			#1. Group information
+			    #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu
+			    #Group Member 2 - Rajasekhar Y
 
-#2. Github URL - https://revanthborusu.github.io/CIS5755/
-    Github repository URL - https://github.com/revanthborusu/CIS5755.git
+			#2. Github URL - https://revanthborusu.github.io/CIS5755/
+			    Github repository URL - https://github.com/revanthborusu/CIS5755.git
 
-#3. How your group work together (activities, hours used for each activity etc)?
-	I and Rajasekhar connected in Zoom multiple times, discussed on the project, and worked on it. We worked for 2 days, 2.5 Hrs. each day. 
-    
+			#3. How your group work together (activities, hours used for each activity etc)?
+				I and Rajasekhar connected in Zoom multiple times, discussed on the project, and worked on it. We worked for 2 days, 2.5 Hrs. each day. 
 
-#4. Project Introduction
-    Host a Static website in GITHUB using Flask.
 
-#5. Major steps
-	Signup to a GITHUB account and created a Repository with name 'CIS5755'
-	Generated a new token to login to Github from CLI(AWS Cloud9 CLI).
-	Created a new environment in AWS cloud9 and deleted the Readme.md file.
-	Configure and clone the repository from Github using below commands.
-		git config --global credential.helper store
-		git clone https://github.com/revanthborusu/CIS5755
-	Created a new directory. setup & Activated the python environment in it.
-	Edited the README.md file as per the Assignment instructions.
-	Created a sample static website file using python flask.
-	Ran the below commands to push the code to GITHUB repository
-		git add --all
-		git status
-		git commit -m "first commit"
-		git push
-		Entered the GITHIB username and Access token
-	Modified files are pushed to Github and In the Github, latest changes are reflected.
-</p>
+			#4. Project Introduction
+			    Host a Static website in GITHUB using Flask.
+
+			#5. Major steps
+				Signup to a GITHUB account and created a Repository with name 'CIS5755'
+				Generated a new token to login to Github from CLI(AWS Cloud9 CLI).
+				Created a new environment in AWS cloud9 and deleted the Readme.md file.
+				Configure and clone the repository from Github using below commands.
+					git config --global credential.helper store
+					git clone https://github.com/revanthborusu/CIS5755
+				Created a new directory. setup & Activated the python environment in it.
+				Edited the README.md file as per the Assignment instructions.
+				Created a sample static website file using python flask.
+				Ran the below commands to push the code to GITHUB repository
+					git add --all
+					git status
+					git commit -m "first commit"
+					git push
+					Entered the GITHIB username and Access token
+				Modified files are pushed to Github and In the Github, latest changes are reflected.
+			</p>
+		</div>
+	</body>
+</html>
+		
