--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 	<body>
 		<div>
 			<p># CIS5755
-			CIS5755 Software Engineering
-			#1. Group information
-			    #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu
-			    #Group Member 2 - Rajasekhar Y
+			CIS5755 Software <br>
+			<h2> #1. Group information</h2><br>
+			    #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu<br>
+			    #Group Member 2 - Rajasekhar Y<br>
 
 			#2. Github URL - https://revanthborusu.github.io/CIS5755/
-			    Github repository URL - https://github.com/revanthborusu/CIS5755.git
-
-			#3. How your group work together (activities, hours used for each activity etc)?
+			    <br> Github repository URL - https://github.com/revanthborusu/CIS5755.git
+				<br>
+			#3. How your group work together (activities, hours used for each activity etc)? <br>
 				I and Rajasekhar connected in Zoom multiple times, discussed on the project, and worked on it. We worked for 2 days, 2.5 Hrs. each day. 
 
+			<br>
+			#4. Project Introduction<br>
+			    Host a Static website in GITHUB using Flask. <br>
 
-			#4. Project Introduction
-			    Host a Static website in GITHUB using Flask.
-
-			#5. Major steps
+			#5. Major steps<br>
 				Signup to a GITHUB account and created a Repository with name 'CIS5755'
 				Generated a new token to login to Github from CLI(AWS Cloud9 CLI).
 				Created a new environment in AWS cloud9 and deleted the Readme.md file.
