--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 		<div>
 			<p># CIS5755
 			CIS5755 Software <br>
-			<h2> #1. Group information</h2><br>
+			<h3> #1. Group information</h3><br>
 			    #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu<br>
 			    #Group Member 2 - Rajasekhar Y<br>
 
-			#2. Github URL - https://revanthborusu.github.io/CIS5755/
+			<h3>#2. Github URL - </h3> https://revanthborusu.github.io/CIS5755/
 			    <br> Github repository URL - https://github.com/revanthborusu/CIS5755.git
 				<br>
-			#3. How your group work together (activities, hours used for each activity etc)? <br>
+			<h3>#3. How your group work together (activities, hours used for each activity etc)?  </h3><br>
 				I and Rajasekhar connected in Zoom multiple times, discussed on the project, and worked on it. We worked for 2 days, 2.5 Hrs. each day. 
 
 			<br>
-			#4. Project Introduction<br>
+			<h3>#4. Project Introduction </h3><br>
 			    Host a Static website in GITHUB using Flask. <br>
 
-			#5. Major steps<br>
+			<h3>#5. Major steps</h3><br>
 				Signup to a GITHUB account and created a Repository with name 'CIS5755'
 				Generated a new token to login to Github from CLI(AWS Cloud9 CLI).
 				Created a new environment in AWS cloud9 and deleted the Readme.md file.
