--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<div>
 			<p># CIS5755
 			CIS5755 Software <br>
-			<h3> #1. Group information</h3><br>
+			<h3> #1. Group information</h3>
 			    #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu<br>
 			    #Group Member 2 - Rajasekhar Y<br>
 
