--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
 	<body>
 		<div>
-			<p># CIS5755
-			CIS5755 Software <br>
+			<br>
 			<h3> #1. Group information</h3>
 			    #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu<br>
 			    #Group Member 2 - Rajasekhar Y<br>
 
-			<h3>#2. Github URL - </h3> https://revanthborusu.github.io/CIS5755/
-			    <br> Github repository URL - https://github.com/revanthborusu/CIS5755.git
+			<h3>#2. Github URL -   <a href="https://revanthborusu.github.io/CIS5755/">https://revanthborusu.github.io/CIS5755/</a> </h3>
+			    <br> Github repository URL - <a href="https://github.com/revanthborusu/CIS5755.git">https://github.com/revanthborusu/CIS5755.git</a>
 				<br>
 			<h3>#3. How your group work together (activities, hours used for each activity etc)?  </h3><br>
 				I and Rajasekhar connected in Zoom multiple times, discussed on the project, and worked on it. We worked for 2 days, 2.5 Hrs. each day. 
@@ -18,22 +17,22 @@
 			    Host a Static website in GITHUB using Flask. <br>
 
 			<h3>#5. Major steps</h3><br>
-				Signup to a GITHUB account and created a Repository with name 'CIS5755'
-				Generated a new token to login to Github from CLI(AWS Cloud9 CLI).
-				Created a new environment in AWS cloud9 and deleted the Readme.md file.
-				Configure and clone the repository from Github using below commands.
-					git config --global credential.helper store
-					git clone https://github.com/revanthborusu/CIS5755
-				Created a new directory. setup & Activated the python environment in it.
-				Edited the README.md file as per the Assignment instructions.
-				Created a sample static website file using python flask.
-				Ran the below commands to push the code to GITHUB repository
+				Signup to a GITHUB account and created a Repository with name 'CIS5755'<br>
+				Generated a new token to login to Github from CLI(AWS Cloud9 CLI).<br>
+				Created a new environment in AWS cloud9 and deleted the Readme.md file.<br>
+				Configure and clone the repository from Github using below commands.<br>
+					git config --global credential.helper store<br>
+					git clone https://github.com/revanthborusu/CIS5755<br>
+				Created a new directory. setup & Activated the python environment in it.<br>
+				Edited the README.md file as per the Assignment instructions.<br>
+				Created a sample static website file using python flask.<br>
+				Ran the below commands to push the code to GITHUB repository<br>
 					git add --all
 					git status
 					git commit -m "first commit"
 					git push
 					Entered the GITHIB username and Access token
-				Modified files are pushed to Github and In the Github, latest changes are reflected.
+				<br>Modified files are pushed to Github and In the Github, latest changes are reflected.
 			</p>
 		</div>
 	</body>
