--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 			<h3> #1. Group information</h3>
 			    #Group Member 1 - Venkata Sai Subrahmanyam Revanth, Borusu<br>
 			    #Group Member 2 - Rajasekhar Y<br>
-
+				<br><br>
+				<br>
 			<h3>#2. Github URL -   <a href="https://revanthborusu.github.io/CIS5755/">https://revanthborusu.github.io/CIS5755/</a> </h3>
 			     Github repository URL - <a href="https://github.com/revanthborusu/CIS5755.git">https://github.com/revanthborusu/CIS5755.git</a>
 				<br>
@@ -22,22 +23,22 @@
 <br><br><br>
 				<br>
 			<h3>#5. Major steps</h3><br>
-				Signup to a GITHUB account and created a Repository with name 'CIS5755'<br>
-				Generated a new token to login to Github from CLI(AWS Cloud9 CLI).<br>
-				Created a new environment in AWS cloud9 and deleted the Readme.md file.<br>
-				Configure and clone the repository from Github using below commands.<br>
+				1. Signup to a GITHUB account and created a Repository with name 'CIS5755'<br>
+				2. Generated a new token to login to Github from CLI(AWS Cloud9 CLI).<br>
+				3. Created a new environment in AWS cloud9 and deleted the Readme.md file.<br>
+				4. Configure and clone the repository from Github using below commands.<br>
 					git config --global credential.helper store<br>
 					git clone https://github.com/revanthborusu/CIS5755<br>
-				Created a new directory. setup & Activated the python environment in it.<br>
-				Edited the README.md file as per the Assignment instructions.<br>
-				Created a sample static website file using python flask.<br>
-				Ran the below commands to push the code to GITHUB repository<br>
+				5. Created a new directory. setup & Activated the python environment in it.<br>
+				6. Edited the README.md file as per the Assignment instructions.<br>
+				7. Created a sample static website file using python flask.<br>
+				8. Ran the below commands to push the code to GITHUB repository<br>
 					git add --all
 					git status
 					git commit -m "first commit"
 					git push
 					Entered the GITHIB username and Access token
-				<br>Modified files are pushed to Github and In the Github, latest changes are reflected.
+				<br>9. Modified files are pushed to Github and In the Github, latest changes are reflected.
 			</p>
 		</div>
 	</body>
