--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			    Host a Static website in GITHUB using Flask. <br>
 <br><br><br>
 				<br>
-			<h3>#5. Major steps</h3><br>
+			<h3>#5. Major steps</h3><br> 
+			<pre>
 				1. Signup to a GITHUB account and created a Repository with name 'CIS5755'<br>
 				2. Generated a new token to login to Github from CLI(AWS Cloud9 CLI).<br>
 				3. Created a new environment in AWS cloud9 and deleted the Readme.md file.<br>
@@ -39,6 +40,7 @@
 					git push
 					Entered the GITHIB username and Access token
 				<br>9. Modified files are pushed to Github and In the Github, latest changes are reflected.
+			</pre>
 			</p>
 		</div>
 	</body>
