--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 				<br>
 				<br><br>
 				<br>
-			<h3>#3. How your group work together (activities, hours used for each activity etc)?  </h3><br>
+			<h3>#3. How your group work together (activities, hours used for each activity etc)?  </h3>
 				I and Rajasekhar connected in Zoom multiple times, discussed on the project, and worked on it. We worked for 2 days, 2.5 Hrs. each day. 
 
 			<br><br><br>
 				<br>
 				
-			<h3>#4. Project Introduction </h3><br>
+			<h3>#4. Project Introduction </h3>
 			    Host a Static website in GITHUB using Flask. <br>
 <br><br><br>
 				<br>
-			<h3>#5. Major steps</h3><br> 
+			<h3>#5. Major steps</h3>
 			<pre>
 				1. Signup to a GITHUB account and created a Repository with name 'CIS5755'<br>
 				2. Generated a new token to login to Github from CLI(AWS Cloud9 CLI).<br>
