--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
 				<br>
 			<h3>#5. Major steps</h3>
 			<pre>
-				1. Signup to a GITHUB account and created a Repository with name 'CIS5755'<br>
-				2. Generated a new token to login to Github from CLI(AWS Cloud9 CLI).<br>
-				3. Created a new environment in AWS cloud9 and deleted the Readme.md file.<br>
-				4. Configure and clone the repository from Github using below commands.<br>
-					git config --global credential.helper store<br>
-					git clone https://github.com/revanthborusu/CIS5755<br>
-				5. Created a new directory. setup & Activated the python environment in it.<br>
-				6. Edited the README.md file as per the Assignment instructions.<br>
-				7. Created a sample static website file using python flask.<br>
-				8. Ran the below commands to push the code to GITHUB repository<br>
-					git add --all
-					git status
-					git commit -m "first commit"
-					git push
-					Entered the GITHIB username and Access token
-				<br>9. Modified files are pushed to Github and In the Github, latest changes are reflected.
+1. Signup to a GITHUB account and created a Repository with name 'CIS5755'<br>
+2. Generated a new token to login to Github from CLI(AWS Cloud9 CLI).<br>
+3. Created a new environment in AWS cloud9 and deleted the Readme.md file.<br>
+4. Configure and clone the repository from Github using below commands.<br>
+	git config --global credential.helper store<br>
+	git clone https://github.com/revanthborusu/CIS5755<br>
+5. Created a new directory. setup & Activated the python environment in it.<br>
+6. Edited the README.md file as per the Assignment instructions.<br>
+7. Created a sample static website file using python flask.<br>
+8. Ran the below commands to push the code to GITHUB repository<br>
+	git add --all
+	git status
+	git commit -m "first commit"
+	git push
+Entered the GITHIB username and Access token
+9. Modified files are pushed to Github and In the Github, latest changes are reflected.
 			</pre>
 			</p>
 		</div>
